Refactor for repeat

--- a/dogparty/index.html
+++ b/dogparty/index.html
@@ -7,11 +7,8 @@
  <title>Dog Party</title>
  <link rel="stylesheet" type="text/css" href="style.css">
  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-
 </head>
-
-<body>
-  
+  <body>
     <header>
       <img class="dog-icon" src="images/dog-icon.svg">
       <ul>
@@ -45,16 +42,14 @@
           <p>Blep fat boi doge wrinkler, borkf very hand that feed shibe borkdrive, adorable doggo he made many woofs. Big ol dat tungg tho h*ck borkdrive tungg most angery pupper I have ever seen smol borking doggo with a long snoot for pats sub woofer, very taste wow I am bekom fat wrinkler sub woofer porgo maximum borkdrive. Borking doggo puggo extremely cuuuuuute floofs extremely cuuuuuute dat tungg tho blep doggorino, heckin thicc porgo vvv doge.</p>
           <button class="butt">Dog Facts</button>
         </section>
-        
-    </section>
-    <footer class="footer">
-      <p>Learn About Dogs Online</p>
-      <img class="icons" src="images/facebook.svg">
-      <img class="icons" src="images/instagram.svg">
-      <img class="icons" src="images/linkedin.svg">
-      <img class="icons" src="images/twitter.svg">
-      <a class="git-link" href="https://github.com/thetabloom">See this on Github</p>
+      </section>
+        <footer class="footer">
+        <p>Learn About Dogs Online</p>
+        <img class="icons" src="images/facebook.svg">
+        <img class="icons" src="images/instagram.svg">
+        <img class="icons" src="images/linkedin.svg">
+        <img class="icons" src="images/twitter.svg">
+        <a class="git-link" href="https://github.com/thetabloom">See this on Github</a>
     </footer>
-
-</body>
+  </body>
 </html>
