Styling margins and padding on columns

--- a/dogparty/index.html
+++ b/dogparty/index.html
@@ -20,35 +20,38 @@
     <section class="jumbotron">
       <h1>A Site About Some Dogs</h1>
       <img class="dog-hero" src="images/dog1-sq.jpg">
-      <button class="one-button">What are dogs</button>
+      <button class="one-button">What are Dogs
+      </button>
     </section>
     <section>
-        <section class="colone">
-          <h3>How</h3>
+      <section class="colone">
+        <h3>How</h3>
           <img class="dog2" src="images/dog2-sq.jpg">
           <p>Lorem ipsum Doggo words
-          Doggo ipsum thicc he made many woofs heckin angery woofer shibe shoob fluffer boof borkdrive heckin pupper, super chub yapper blep heckin angery woofer puggo long woofer aqua doggo. Fluffer very hand that feed shibe long water shoob shibe maximum borkdrive the neighborhood pupper, shibe noodle horse pupperino many pats. You are doing me the shock length boy ur givin me a spook maximum. </p>
+          Doggo ipsum thicc he made many woofs heckin angery woofer shibe shoob fluffer boof borkdrive heckin pupper, super chub yapper blep heckin angery woofer puggo long woofer aqua doggo. Fluffer very hand that feed shibe long water shoob shibe maximum borkdrive the neighborhood pupper.</p>
           <button class="butt">How to Dog</button>
-        </section>
-        <section class="colone">
-          <h3>What</h3>
+      </section>
+      <section class="colone">
+        <h3>What</h3>
           <img class="dog3" src="images/dog3-sq.jpg">
-          <p>Blep fat boi doge wrinkler, borkf very hand that feed shibe borkdrive, adorable doggo he made many woofs. Big ol dat tungg tho h*ck borkdrive tungg most angery pupper I have ever seen smol borking doggo with a long snoot for pats sub woofer, very taste wow I am bekom fat wrinkler sub woofer porgo maximum borkdrive. Borking doggo puggo extremely cuuuuuute floofs extremely cuuuuuute dat tungg tho blep doggorino, heckin thicc porgo vvv doge.</p>
+          <p>Blep fat boi doge wrinkler, borkf very hand that feed shibe borkdrive, adorable doggo he made many woofs. Big ol dat tungg tho h*ck borkdrive tungg most angery pupper I have ever seen smol borking doggo with a long snoot for pats sub woofer, very taste wow I am bekom fat wrinkler sub woofer porgo maximum borkdrive.
+          </p>
           <button class="butt">What is Dog</button>
-        </section>
-        <section class="colone">
-          <h3>Facts</h3>
+      </section>
+      <section class="colone">
+        <h3>Facts</h3>
           <img class="dog2" src="images/dog4-sq.jpg">
-          <p>Blep fat boi doge wrinkler, borkf very hand that feed shibe borkdrive, adorable doggo he made many woofs. Big ol dat tungg tho h*ck borkdrive tungg most angery pupper I have ever seen smol borking doggo with a long snoot for pats sub woofer, very taste wow I am bekom fat wrinkler sub woofer porgo maximum borkdrive. Borking doggo puggo extremely cuuuuuute floofs extremely cuuuuuute dat tungg tho blep doggorino, heckin thicc porgo vvv doge.</p>
+          <p>Blep fat boi doge wrinkler, borkf very hand that feed shibe borkdrive, adorable doggo he made many woofs. Big ol dat tungg tho h*ck borkdrive tungg most angery pupper I have ever seen smol borking doggo with a long snoot for pats sub woofer, very taste wow I am bekom fat wrinkler sub woofer porgo maximum borkdrive. 
+          </p>
           <button class="butt">Dog Facts</button>
-        </section>
+      </section>
       </section>
         <footer class="footer">
-        <p>Learn About Dogs Online</p>
+        <p class="learn">Learn About Dogs Online</p>
         <img class="icons" src="images/facebook.svg">
+        <img class="icons" src="images/twitter.svg">
         <img class="icons" src="images/instagram.svg">
         <img class="icons" src="images/linkedin.svg">
-        <img class="icons" src="images/twitter.svg">
         <a class="git-link" href="https://github.com/thetabloom">See this on Github</a>
     </footer>
   </body>
